--- a/backend/coreapp/static/main.css
+++ b/backend/coreapp/static/main.css
@@ -1,16 +1,3 @@
-:root {
-    --font-ui: -apple-system,"BlinkMacSystemFont","Segoe UI","Helvetica","Arial",sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    --gnav-inner-size: 24px;
-    --gnav-padding: 8px;
-    --gnav-breadicon-size: 16px;
-    --gnav-breadicon-margin: 4px;
-    --gnav-bg: #eee;
-    --gnav-border-color: #ccc;
-    --gnav-link: #333;
-    --gnav-link-hover: #000;
-    --avatar-bg: #ddd;
-}
-
 /* RESETS */
 
 *,
@@ -36,7 +23,7 @@ body {
     scrollbar-width: thin;*/
 
     font-size: 16px;
-    font-family: var(--font-ui);
+    font-family: -apple-system,"BlinkMacSystemFont","Segoe UI","Helvetica","Arial",sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     line-height: 1.5;
     text-rendering: optimizeQuality;
 }
@@ -44,6 +31,12 @@ body {
 html,
 body {
     height: 100%;
+}
+
+h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.25;
 }
 
 /* UTILITY CLASSES */
@@ -55,6 +48,10 @@ body {
     left: -9999px !important;
 }
 
+:root {
+    --avatar-bg: #ddd;
+}
+
 .avatar {
     display: inline-block;
     width: 32px;
@@ -63,19 +60,108 @@ body {
     background-color: var(--avatar-bg);
 }
 
+.container {
+    width: 100%;
+    max-width: 920px;
+    margin: 0 auto;
+    padding: 1em;
+}
+
+.bg-alt {
+    background: #eee;
+}
+
 /* FORMS */
+
+:root {
+    --form-border-color: #ccc;
+
+    --form-button-ghost-color: #333333;
+    --form-button-ghost-hover-border-color: #777777;
+    --form-button-ghost-hover-fg: #000;
+
+    --form-button-primary-bg: #951fd9;
+    --form-button-primary-hover-bg: #8631b8;
+    --form-button-primary-fg: rgba(255, 255, 255, 0.98);
+    --form-button-primary-hover-fg: #fff;
+    --form-button-primary-border-color: #cc87f4;
+}
 
 input[type=search],
 input[type=text] {
     border-radius: 6px;
-    border: 1px solid var(--gnav-border-color);
+    border: 1px solid var(--form-border-color);
 
     padding: 8px 12px;
 
     text-overflow: ellipsis;
 }
 
+button,
+input[type=submit],
+input[type=button],
+.button,
+.button-primary {
+    border-radius: 4px;
+    padding: 0.4em 0.9em;
+
+    font-size: 0.85rem;
+    font-weight: 500;
+
+    user-select: none;
+    appearance: none;
+
+    display: inline-flex;
+    gap: 0.5em;
+    align-items: center;
+
+    color: var(--form-button-ghost-color);
+    border: 1.5px solid var(--form-border-color);
+    transition: color 0.2s ease, background 0.15s ease, border-color 0.15s ease;
+}
+
+button:disabled,
+input[type=submit]:disabled,
+input[type=button]:disabled,
+.button[data-disabled],
+.button-primary[data-disabled] {
+    opacity: 0.7;
+    pointer-events: none;
+}
+
+/* Ghost button */
+button:hover,
+input[type=submit]:hover,
+input[type=button]:hover,
+.button:hover {
+    color: var(--form-button-ghost-hover-fg);
+    border-color: var(--form-button-ghost-hover-border-color);
+}
+
+/* Primary button */
+.button-primary {
+    background: var(--form-button-primary-bg);
+    color: var(--form-button-primary-fg);
+    border-color: var(--form-button-primary-border-color);
+}
+
+.button-primary:hover {
+    background: var(--form-button-primary-hover-bg);
+    color: var(--form-button-primary-hover-fg);
+}
+
 /* GLOBAL NAVIGATION */
+
+:root {
+    --gnav-inner-size: 24px;
+    --gnav-padding: 8px;
+    --gnav-breadicon-size: 16px;
+    --gnav-breadicon-margin: 4px;
+    --gnav-bg: #eee;
+    --gnav-border-color: #ccc;
+    --gnav-link: #333;
+    --gnav-link-hover: #000;
+}
 
 #gnav {
     user-select: none;
