--- a/backend/coreapp/templates/index_nologin.html
+++ b/backend/coreapp/templates/index_nologin.html
@@ -1,4 +1,5 @@
 {% extends "base_generic.html" %}
+{% load icon %}
 {% block head %}
 
 <meta property="og:title" content="decomp.me">
@@ -32,10 +33,10 @@
         </p>
         <div class="index-cta-row">
             <a class="button" href="/login">
-                Sign in with GitHub
+                {% icon "mark-github" %} Sign in with GitHub
             </a>
             <a class="button-primary" href="/new">
-                Start decomping
+                Start decomping {% icon "arrow-right" %}
             </a>
         </div>
     </div>
