--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -184,7 +184,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    overflow-x: hidden;
+    //overflow-x: hidden;
     position: relative; // squashes react-laag warning
 }
 
