--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -120,11 +120,6 @@ $padding: 8px;
     }
 }
 
-body:has(.container[data-open="true"]) {
-    // Disable scrolling
-    overflow: hidden;
-}
-
 .searchContainer {
     padding: $padding;
     border-bottom: 1px solid var(--g500);
@@ -148,14 +143,63 @@ body:has(.container[data-open="true"]) {
             display: block;
             width: 100%;
             height: 100%;
+        }
+    }
+}
 
-            color: var(--g1800);
-            transition: color 0.2s ease-out;
+.links > li > a,
+.desktopLinks > ul > li > a {
+    color: var(--g2000);
+    font-weight: 500;
 
-            font-weight: 400;
+    &:hover {
+        color: var(--g1700);
+    }
+}
 
-            &:hover {
-                color: var(--g2000);
+.desktopLinks {
+    display: none;
+}
+
+// on mobile
+@media (max-width: 700px) {
+    body:has(.container[data-open="true"]) {
+        // Disable scrolling
+        overflow: hidden;
+    }
+}
+
+// on desktop
+@media (min-width: 700px) {
+    .header {
+        grid-template-columns: $innerSize auto 1fr;
+        grid-template-areas: "sitelogo desktoplinks loginstate";
+    }
+
+    .headerItemMenuToggle,
+    .menu {
+        display: none;
+    }
+
+    .desktopLinks {
+        grid-area: desktoplinks;
+
+        font-size: 0.85rem;
+        margin-left: $padding;
+
+        display: flex;
+        align-items: center;
+
+        > ul {
+            display: flex;
+            align-items: center;
+            gap: 1em;
+
+            > li {
+                height: $innerSize;
+
+                display: flex;
+                align-items: center;
             }
         }
     }
