--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -143,7 +143,7 @@ html {
 }
 
 body {
-    background: var(--g200);
+    background: var(--g300);
     color: var(--a800);
 
     line-height: 1.25;
@@ -195,6 +195,10 @@ body {
 main {
     flex: 1;
     width: 100%;
+}
+
+main, footer {
+    background: var(--g200);
 }
 
 ::selection {
