--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -3,6 +3,12 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+
+    > hr {
+        margin: 0;
+        border: 0;
+        border-top: 1px solid var(--g500);
+    }
 }
 
 .context {
