disable scrolling on scratch page

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -55,6 +55,14 @@
 
     display: flex;
     align-items: center;
+
+    // Hide owner on small widths
+    @media (max-width: 800px) {
+        li::before,
+        li:not(:last-child) {
+            display: none !important;
+        }
+    }
 }
 
 .actions {
