--- a/frontend/src/components/Nav/Search.module.scss
+++ b/frontend/src/components/Nav/Search.module.scss
@@ -34,8 +34,7 @@
     &:focus,
     &.isOpen {
         outline: none;
-        border-color: rgba(255, 255, 255, 0.125);
-        background: rgba(0, 0, 0, 0.5);
+        background: var(--g100);
 
         @supports not (backdrop-filter: blur(10px)) {
             background: var(--g100);
