--- a/frontend/src/pages/settings/[tab].module.scss
+++ b/frontend/src/pages/settings/[tab].module.scss
@@ -166,7 +166,7 @@
     }
 }
 
-.fontSizeInputs {
+.rangeInputPair {
     display: grid;
     grid-template-columns: 1fr minmax(44px, auto);
     align-items: center;
