--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -6,9 +6,30 @@
     --font-ui: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
-.cm-content {
-    color: #647a97;
+// Code theme
+body {
+    --code-background: var(--g200);
+    --code-cursor: var(--g2000);
+    --code-selection: var(--a100);
+    --code-highlight: var(--a50);
 
+    --code-foreground: #647a97;
+    --code-keyword: #7f83ff;
+    --code-variable: #8599b3;
+    --code-type: #45b8ff;
+    --code-function: #ff4a98;
+    --code-punctuation: #656f7e;
+    --code-operator: #7f83ff;
+    --code-comment: #465173;
+    --code-number: #0afafa;
+    --code-bool: #f248bc;
+    --code-string: #face0a;
+    --code-character: #cefa0a;
+    --code-preprocessor: #3bff6c;
+}
+
+.cm-content {
+    color: var(--code-foreground);
     cursor: text;
 }
 
@@ -21,45 +42,51 @@
 
 .cmt-propertyName,
 .cmt-variableName {
-    color: #8599b3;
+    color: var(--code-variable);
 }
 
 .cmt-function {
-    color: #ff4a98;
+    color: var(--code-function);
 }
 
 .cmt-punctuation {
-    color: #656f7e;
+    color: var(--code-punctuation);
 }
 
 .cmt-operator {
-    color: #7f83ff;
+    color: var(--code-operator);
 }
 
 .cmt-comment {
-    color: #465173;
+    color: var(--code-comment);
 }
 
-.cmt-number,
+.cmt-number {
+    color: var(--code-number);
+}
+
 .cmt-bool {
-    color: #0afafa;
+    color: var(--code-bool);
 }
 
 .cmt-string {
-    color: #face0a;
+    color: var(--code-string);
 }
 
 .cmt-typeName {
-    color: #45b8ff;
+    color: var(--code-type);
 }
 
 .cmt-keyword {
-    color: #7f83ff;
+    color: var(--code-keyword);
 }
 
-.cmt-meta,
+.cmt-meta {
+    color: var(--code-preprocessor);
+}
+
 .cmt-character {
-    color: #3bff6c;
+    color: var(--code-character);
 }
 
 .theme-dark {
@@ -69,6 +96,55 @@
 .theme-light {
     @include theme.theme(#951fd9, #ffffff);
 }
+
+/*
+.cm-content {
+    color: #abb2bf;
+}
+
+.cmt-operator,
+.cmt-punctuation {
+    color: #abb2bf;
+}
+
+.cmt-comment {
+    color: #81858d;
+}
+
+.cmt-propertyName {
+    color: #f26161;
+}
+
+.cmt-variableName {
+    color: #f29161;
+}
+
+.cmt-typeName {
+    color: #f2c261;
+}
+
+.cmt-function {
+    color: #61b6f2;
+}
+
+.cmt-bool,
+.cmt-number {
+    color: #f2a761;
+}
+
+.cmt-string {
+    color: #5ce55c;
+}
+
+.cmt-keyword {
+    color: #d479f2;
+}
+
+.cmt-character,
+.cmt-meta {
+    color: #d479f2;
+}
+*/
 
 .cm-panel {
     font-size: 1rem;
