--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -148,9 +148,6 @@ body {
     line-height: 1.25;
     user-select: none;
     position: relative;
-
-    scrollbar-color: #fff3 #fff1;
-    scrollbar-width: thin;
 }
 
 html,
@@ -158,23 +155,28 @@ body {
     height: 100%;
 }
 
-::-webkit-scrollbar {
-    background-color: transparent;
-    width: 0.6rem;
-    height: 0.6rem;
-}
+body:not(.device-macos) {
+    scrollbar-color: #fff3 #fff1;
+    scrollbar-width: thin;
 
-::-webkit-scrollbar-track,
-::-webkit-scrollbar-corner {
-    background-color: #fff1;
-}
+    ::-webkit-scrollbar {
+        background-color: transparent;
+        width: 0.6rem;
+        height: 0.6rem;
+    }
 
-::-webkit-scrollbar-thumb {
-    background-color: #fff3;
-}
+    ::-webkit-scrollbar-track,
+    ::-webkit-scrollbar-corner {
+        background-color: #fff1;
+    }
 
-::-webkit-scrollbar-button {
-    display: none;
+    ::-webkit-scrollbar-thumb {
+        background-color: #fff3;
+    }
+
+    ::-webkit-scrollbar-button {
+        display: none;
+    }
 }
 
 #__next {
