--- a/frontend/src/components/Nav/LoginState.module.scss
+++ b/frontend/src/components/Nav/LoginState.module.scss
@@ -1,17 +1,17 @@
-@use "./Nav.module.scss"; // .item
-
 .user {
-    @extend .item;
-
     cursor: pointer;
 
-    gap: 2px;
-    padding: 0 2px;
+    display: flex;
+    align-items: center;
+    gap: 1px;
 
-    font-size: 0.8em;
-    font-weight: 400;
+    // Override <button>
+    background: none;
+    border: none;
 }
 
 .avatar {
     border-radius: 24px;
+    width: 24px;
+    height: 24px;
 }
