--- a/frontend/src/components/Scratch/Scratch.module.scss
+++ b/frontend/src/components/Scratch/Scratch.module.scss
@@ -3,4 +3,50 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+
+    > hr {
+        margin: 0;
+        border: 0;
+        border-top: 1px solid var(--g500);
+    }
+}
+
+.context {
+    display: flex;
+    flex-direction: column;
+}
+
+.editor {
+    display: flex;
+    align-items: stretch;
+
+    width: 100%;
+    height: 100%;
+
+    :global(.cm-editor) {
+        flex: 1 1 auto;
+        width: 100%;
+    }
+
+    :global(.cm-scroller) {
+        overflow: auto;
+    }
+}
+
+.diffTab {
+    display: flex;
+    overflow: hidden;
+}
+
+.about {
+    padding: 16px;
+    overflow: auto;
+}
+
+.compilerOptsTab {
+    overflow: auto;
+}
+
+.compilerOptsContainer {
+    min-width: 400px;
 }
