fix stylelint issues

--- a/frontend/src/components/ThemePicker.module.scss
+++ b/frontend/src/components/ThemePicker.module.scss
@@ -15,7 +15,8 @@
 
     cursor: pointer;
 
-    &[data-active="true"], &:hover {
+    &[data-active="true"],
+    &:hover {
         color: var(--g2000);
         background: var(--g300);
     }
