--- a/frontend/src/components/ColorSchemePicker.module.scss
+++ b/frontend/src/components/ColorSchemePicker.module.scss
@@ -27,7 +27,8 @@
 
     cursor: pointer;
 
-    &[data-active="true"], &:hover {
+    &[data-active="true"],
+    &:hover {
         color: var(--g2000);
         background: var(--g300);
     }
