add margin between attempt scratchlist items

--- a/frontend/src/pages/[project]/[function].module.scss
+++ b/frontend/src/pages/[project]/[function].module.scss
@@ -47,6 +47,7 @@
     > ul > li {
         border-color: var(--g300);
         border-radius: 4px;
+        margin-bottom: 8px;
     }
 
     .noAttempts {
