move settings button to nav

--- a/frontend/src/components/Nav/LoginState.module.scss
+++ b/frontend/src/components/Nav/LoginState.module.scss
@@ -3,7 +3,8 @@
 
     display: flex;
     align-items: center;
-    gap: 1px;
+
+    padding: 0 3px;
 
     // Override <button>
     background: none;
