--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -68,7 +68,7 @@
 .actions {
     list-style: none;
 
-    padding: 0 8px;
+    padding: 0 4px;
 
     font-size: 12px;
 
@@ -99,7 +99,7 @@
             display: flex;
             align-items: center;
             gap: 4px;
-            padding: 6px 8px;
+            padding: 8px;
 
             cursor: pointer;
 
