--- a/frontend/src/components/Nav/Search.module.scss
+++ b/frontend/src/components/Nav/Search.module.scss
@@ -34,19 +34,13 @@
     &:focus,
     &.isOpen {
         outline: none;
-        background: var(--g100);
-
-        @supports not (backdrop-filter: blur(10px)) {
-            background: var(--g100);
-        }
 
         &::placeholder {
-            color: var(--g900);
+            color: var(--g600);
         }
     }
 
     &.isOpen {
-        border-bottom: 0;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
     }
@@ -81,6 +75,11 @@
 .results {
     list-style: none;
     transform-origin: center top;
+
+    backdrop-filter: none;
+    background: var(--g300);
+    border-top: 0;
+    border-color: var(--g600);
 
     border-top-left-radius: 0;
     border-top-right-radius: 0;
