Add appearance options (#523)
* add auto light theme

* increase editor contrast

* improve settings page, add theme picker

* don't rehydrate when clicking settings tab

* add code font family setting

* add code line height setting

* add code color scheme editor

* base selection/highlight colors on background not site theme

* add footer to settings page

* fix /settings links

* add color scheme presets

* fix lil bugs

* update diff colors

* darken light colorscheme bg

* 'Preferences' -> 'Settings'

* bump stylelint

* fix stylelint issues

* combine diff/code font size settings

* fix diff column distribution bug

Introduced in #520

* remove save/fork duplicate button from scratch toolbar right

* move compile button

* move settings button to nav

* allow styling cm gutter color

* fix editor height on settings

* act as sidebar when nav is toggled on large widths

* improve breadcrumb styling

* improve search styling

--- a/frontend/src/components/Nav/Search.module.scss
+++ b/frontend/src/components/Nav/Search.module.scss
@@ -34,20 +34,13 @@
     &:focus,
     &.isOpen {
         outline: none;
-        border-color: rgba(255, 255, 255, 0.125);
-        background: rgba(0, 0, 0, 0.5);
-
-        @supports not (backdrop-filter: blur(10px)) {
-            background: var(--g100);
-        }
 
         &::placeholder {
-            color: var(--g900);
+            color: var(--g600);
         }
     }
 
     &.isOpen {
-        border-bottom: 0;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
     }
@@ -82,6 +75,11 @@
 .results {
     list-style: none;
     transform-origin: center top;
+
+    backdrop-filter: none;
+    background: var(--g300);
+    border-top: 0;
+    border-color: var(--g600);
 
     border-top-left-radius: 0;
     border-top-right-radius: 0;
