--- a/frontend/src/pages/settings/[tab].module.scss
+++ b/frontend/src/pages/settings/[tab].module.scss
@@ -1,38 +1,179 @@
 .container {
-    max-width: 50em;
+    max-width: 80em;
+    margin: 2em auto;
+    padding: 0 1em;
 
     cursor: default;
+
+    display: grid;
+    grid-template-columns: 16em 1fr;
+    gap: 2em;
+
+    @media (max-width: 60em) {
+        display: block;
+
+        .tabs {
+            padding: 0.5em;
+            border-bottom: 1px solid var(--g400);
+        }
+    }
+
+    aside h1 {
+        color: var(--g1900);
+        font-size: 1.25em;
+        font-weight: 500;
+        margin: 0;
+        padding: 0 16px 8px 16px;
+    }
 }
 
 .tabs {
     height: 100%;
 }
 
-.tabPanel {
-    padding: 1em;
+.content {
+    @media (max-width: 60em) {
+        padding: 1em 0;
+    }
+
+    > section {
+        margin-top: 32px;
+
+        &:first-child {
+            margin-top: 0;
+        }
+
+        h2 {
+            color: var(--g1900);
+            font-size: 1.5em;
+            font-weight: 500;
+            padding-bottom: 0.5em;
+            border-bottom: 1px solid var(--g300);
+            margin-bottom: 0.5em;
+        }
+
+        p {
+            margin: 0.5em 0;
+            max-width: 50ch;
+            color: var(--g1500);
+        }
+    }
 
     label {
-        display: flex;
-        gap: 0.5em;
-        align-items: center;
+        display: inline-block;
+        font-weight: 500;
+        margin: 16px 10px 2px 10px;
 
-        font-size: 0.9em;
-        color: var(--g1500);
+        &:first-child {
+            margin-top: 0;
+        }
+    }
+
+    input[type="text"] {
+        width: 100%;
+        padding: 8px 10px;
+
+        color: var(--g1200);
+        background: var(--g200);
+        font-size: 0.9rem;
+        border: 1px solid var(--g500);
+        border-radius: 4px;
+
+        outline: none !important;
+
+        &::-webkit-input-placeholder {
+            color: var(--g700);
+        }
+
+        &:focus {
+            color: var(--g1600);
+        }
+
+        &:global(#monospaceFont) {
+            display: block;
+            min-height: 36px; // Font can change size while typing, so force the height
+            font: 0.8rem var(--monospace);
+        }
+    }
+
+    input[type="range"] {
+        -webkit-appearance: none;
+
+        background: none;
+        height: 16px;
+
+        &::-webkit-slider-runnable-track {
+            height: 4px;
+            background: var(--g800);
+            border: none;
+            border-radius: 99px;
+        }
+
+        &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 16px;
+            height: 16px;
+            margin-top: -6px;
+            background: var(--g1600);
+            border: none;
+            border-radius: 99px;
+            cursor: ew-resize;
+
+            &:hover {
+                background: var(--g2000);
+            }
+        }
     }
 }
 
+.booleanPreference,
 .intPreference {
-    display: flex;
-    gap: 0.5em;
-    align-items: center;
+    display: block;
+    padding: 0.5em 0;
 
     font-size: 0.9em;
-    color: var(--g1500);
+    color: var(--g1800);
+
+    > input {
+        margin-right: 0.5em;
+    }
+
+    &.disabled {
+        filter: grayscale(100%) opacity(50%);
+    }
 }
 
-.numberInput {
-    background-color: var(--g400);
-    color: var(--g1500);
-    border: none;
-    padding: 0.08em;
+.col2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 1em;
+
+    @media (max-width: 40em) {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+    }
+}
+
+.exampleCodeEditor {
+    border: 1px solid var(--g300);
+
+    overflow: hidden;
+
+    :global(.cm-editor) {
+        height: 550px;
+    }
+}
+
+.rangeInputPair {
+    display: grid;
+    grid-template-columns: 1fr minmax(44px, auto);
+    align-items: center;
+    gap: 8px;
+
+    padding: 0.2em;
+
+    > div:last-child {
+        justify-self: end;
+    }
 }
