--- a/frontend/src/components/PrScratchBasket.module.scss
+++ b/frontend/src/components/PrScratchBasket.module.scss
@@ -13,8 +13,8 @@
 
     background: var(--g200);
     border: 1px solid var(--g400);
-    border-radius: .4em;
-    box-shadow: 0 0 .3em rgba(0, 0, 0, .3);
+    border-radius: 0.4em;
+    box-shadow: 0 0 0.3em rgba(0, 0, 0, 0.3);
 
     > h2 {
         color: var(--g1400);
