--- a/frontend/src/pages/[project]/[function].module.scss
+++ b/frontend/src/pages/[project]/[function].module.scss
@@ -36,6 +36,9 @@
         gap: 0.5em;
         padding: 0 0 0.5em 1em;
 
+        color: var(--g1400);
+        font-weight: 600;
+
         > :first-child {
             flex-grow: 1;
         }
@@ -44,6 +47,7 @@
     > ul > li {
         border-color: var(--g300);
         border-radius: 4px;
+        margin-bottom: 8px;
     }
 
     .noAttempts {
